[WIP] Retrograde to Java 11